# openai-agent-sdk

./: README.md  pyproject.toml
automated_sales_outreach/: app.py  sales_agent_detailed_verified.ipynb  verify_execution.py  verify_setup.py
automated_sales_outreach/src/: agent_tools.py  agents.py  clients.py  config.py  tools.py  utils.py
simple-project/: main.py
